@@ -1,3 +1,3 @@
-package ifneeded simulation::random 0.3 [list source [file join $dir random.tcl]]
+package ifneeded simulation::random 0.3.1 [list source [file join $dir random.tcl]]
 package ifneeded simulation::montecarlo 0.1 [list source [file join $dir montecarlo.tcl]]
 package ifneeded simulation::annealing 0.2 [list source [file join $dir annealing.tcl]]
