@@ -1,8 +1,12 @@
+2012-08-15  Arjen Markus  <arjenmarkus@users.sourceforge.net>
+	* random.tcl: Correct the normal random number generator (missing factor 2 - reported by Jochem Snuverink)
+	* pkgIndex.tcl: bumped version to 0.3.1 for "random"
+
 2011-12-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	*
 	* Released and tagged Tcllib 1.14 ========================
-	* 
+	*
 
 2011-06-17  Arjen Markus  <arjenmarkus@users.sourceforge.net>
 	* random.tcl: [Bug 3316478]: solve a few more bugs in the PRNG procedures
